# drmr-stack-template

./: LICENSE  Makefile  readme.md
.devcontainer/: Dockerfile.workspace  devcontainer.json  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: domain.rs  main.rs
backend/src/domain/: in_memory.rs
frontend/: package-lock.json
